--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -17,25 +17,31 @@
                 </MenuBarItem.Background>
                 <MenuFlyoutItem x:Name="MandelBrot" Text="MandelBrot" Click="MandelBrot_Click"/>
                 <MenuFlyoutItem x:Name="JuliaSet" Text="Julia" Click="JuliaSet_Click"/>
-                <MenuFlyoutItem x:Name="BurningShip" Text="BurningShip" Click="BurningShip_Click"/>
+                <MenuFlyoutItem x:Name="DuckFractals" Text="BurningShip" Click="BurningShip_Click"/>
                 <MenuFlyoutItem x:Name="MultiSets" Text="MultiSets" Click="MultiSets_Click"/>
-                <MenuFlyoutItem Text="Coming Soon!"/>
+                <MenuFlyoutItem x:Name="BurningShip" Text="Attractors" Click="Attractors_Click"/>
             </MenuBarItem>
         </MenuBar>
         <AppBar VerticalAlignment="Bottom">
             <StackPanel Orientation="Horizontal">
                 <AppBarButton x:Name="play" Label="Play" Icon="Play" Click="play_Click"/>
                 <AppBarElementContainer>
-                    <Slider x:Name="MaxIter" Value="256" Margin="5,0,0,0" StepFrequency="8" TickFrequency="8" Header="maxIteration" Width="100" Minimum="16" Maximum="512" ValueChanged="MaxIter_ValueChanged"></Slider>
+                    <Slider x:Name="MaxIter" Value="256" Margin="5,0,0,0" StepFrequency="8" TickFrequency="8" Header="maxIteration" Width="100" Minimum="16" Maximum="1024" ValueChanged="MaxIter_ValueChanged"></Slider>
                 </AppBarElementContainer>
                 <AppBarElementContainer>
-                    <Slider x:Name="DivergenceLimit" Value="2" Margin="5,0,0,0" Header="DivergeanceOffset" Width="150" Minimum="0.01" Maximum="5" TickFrequency="1" StepFrequency="0.01" ValueChanged="DivergenceLimit_ValueChanged"></Slider>
+                    <Slider x:Name="DivergenceLimit" Value="2" Margin="5,0,0,0" Header="DivergeanceOffset" Width="150" Minimum="0.01" Maximum="1000" TickFrequency="1" StepFrequency="0.01" ValueChanged="DivergenceLimit_ValueChanged"></Slider>
                 </AppBarElementContainer>
                 <AppBarElementContainer>
                     <Slider x:Name="Resolution" Value="2" Margin="5,0,0,0" Header="Resolution(X=Y)" Width="150" Minimum="500" Maximum="1270" TickFrequency="1" StepFrequency="0.01" ValueChanged="Resolution_ValueChanged"></Slider>
                 </AppBarElementContainer>
                 <AppBarElementContainer>
                     <ToggleSwitch x:Name="Animate" Margin="5,0,0,0" Header="Animate :" Toggled="Animate_Toggled"/>
+                </AppBarElementContainer>
+                <AppBarElementContainer>
+                    <Slider x:Name="alphaV" Value="0" Margin="5,0,0,0" Header="Z_init_X" Width="150" Minimum="-10" Maximum="10" TickFrequency="0.001" StepFrequency="0.001" ValueChanged="Alpha_ValueChanged"></Slider>
+                </AppBarElementContainer>
+                <AppBarElementContainer>
+                    <Slider x:Name="betaV" Value="0" Margin="5,0,0,0" Header="Z_init_Y" Width="150" Minimum="-10" Maximum="10" TickFrequency="0.001" StepFrequency="0.001" ValueChanged="Beta_ValueChanged"></Slider>
                 </AppBarElementContainer>
                 <AppBarElementContainer>
                     <Slider x:Name="Nthpower" Value="5" Margin="5,0,0,0" Header="MultijuliaPower" Width="150" Minimum="2" Maximum="23" TickFrequency="1" StepFrequency="1" ValueChanged="Nthpower_ValueChanged"></Slider>
